--- a/ConsolApp/Student.Console.csproj
+++ b/ConsolApp/Student.Console.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JsonLib\Sudent.Json.csproj" />
+    <ProjectReference Include="..\StudentReader\Sudent.Json.csproj" />
     <ProjectReference Include="..\PersonLib\Sudent.Data.csproj" />
   </ItemGroup>
 
