--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ msbuild.log
 msbuild.err
 msbuild.wrn
 
-.vs/
+/.vs
 
 #Отладка
 [Dd]ebug/
@@ -70,4 +70,4 @@ bld/
 *.svclog
 *.scc
 
-/JsonLib
+/JsonLib/obj
