--- a/ConsolApp/Student.Console.csproj
+++ b/ConsolApp/Student.Console.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StudentRead\Sudent.Json.csproj" />
-    <ProjectReference Include="..\PersonLib\Sudent.Data.csproj" />
+    <ProjectReference Include="..\Student\Sudent.Data.csproj" />
   </ItemGroup>
 
 </Project>
