--- a/StudentRead/Sudent.Json.csproj
+++ b/StudentRead/Sudent.Json.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PersonLib\Sudent.Data.csproj" />
+    <ProjectReference Include="..\Student\Sudent.Data.csproj" />
   </ItemGroup>
 
 </Project>
